tests/errors/syn_method25.java
public class syn_method25 {
public static main ( ) {
 
}
}